feature: Database 환경 변수 수정 및 package 스크립트 수정

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:pull": "prisma db pull && prisma generate",
-    "prisma:migrate": "prisma migrate dev --name dev"
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
