--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://devRecipe4m:devRecipe4m@192.168.100.130:27017/dev_recipe4m"
+DATABASE_URL="mongodb://devRecipe4m:devRecipe4m@192.168.100.130:27017/dev_recipe4m_auth"
