--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:generate": "prisma generate"
+    "prisma:pull": "prisma db pull && prisma generate",
+    "prisma:migrate": "prisma migrate dev --name migrate"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
