--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://devRecipe4m:devRecipe4m@192.168.100.130:3306/dev_recipe4m_auth"
+
+GLOBAL_PREFIX="api/dev"
