feature: Auth module 생성

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@
 
 DATABASE_URL="mysql://devRecipe4m:devRecipe4m@192.168.100.130:3306/dev_recipe4m_auth"
 
-GLOBAL_PREFIX="api/dev"
+GLOBAL_PREFIX="dev/api/auth"
 
 PORT=3000
