--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ DATABASE_URL="mysql://devRecipe4m:devRecipe4m@192.168.100.130:3306/dev_recipe4m_
 GLOBAL_PREFIX="dev/api/auth"
 
 PORT=3000
+
+O_AUTH_GOOGLE_CLIENT_ID="124981377138-0k9v2ld8kkrt4m7hoads8694b8ndet5j.apps.googleusercontent.com"
