--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.1.2",
     "@nestjs/swagger": "^5.1.5",
     "@prisma/client": "^3.7.0",
+    "google-auth-library": "^7.11.0",
     "reflect-metadata": "^0.1.13",
     "response-time": "^2.3.2",
     "rimraf": "^3.0.2",
