--- a/.env
+++ b/.env
@@ -13,3 +13,8 @@ GLOBAL_PREFIX="dev/api/auth"
 PORT=3000
 
 O_AUTH_GOOGLE_CLIENT_ID="124981377138-0k9v2ld8kkrt4m7hoads8694b8ndet5j.apps.googleusercontent.com"
+
+ISS="recipe4m.com"
+REFRESH_EXPIRES_IN="30d"
+
+JWT_SECRET="$oXTY6K6y94bG@5HNLQmoCd4rgg60Y1d"
