--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
   "dependencies": {
     "@nestjs/common": "^8.1.2",
     "@nestjs/core": "^8.1.2",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.2",
     "@nestjs/swagger": "^5.1.5",
     "@prisma/client": "^3.7.0",
     "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "response-time": "^2.3.2",
     "rimraf": "^3.0.2",
@@ -43,6 +47,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
