fix: 토큰 발급 에러 수정

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://devRecipe4m:devRecipe4m@192.168.100.130:3306/dev_recipe4m_auth"
+DATABASE_URL="mysql://fine:fine@192.168.100.130:3306/dev_recipe4m_auth"
 
 GLOBAL_PREFIX="dev/api/auth"
 
