--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,8 +3,8 @@
     "baseUrl": "./",
     "paths": {
       "@http-exceptions/*": ["./src/libs/http-exceptions/*"],
+      "@guards/*": ["./src/libs/guards/*"],
       "@libs/*": ["./src/libs/*"],
-      "@filters/*": ["./src/filters/*"],
       "@auth/*": ["./src/auth/*"],
       "@user/*": ["./src/user/*"],
       "@prisma/*": ["./src/prisma/*"],
