feature: Global prefix 설정 변경

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 
 DATABASE_URL="mysql://devRecipe4m:devRecipe4m@192.168.100.130:3306/dev_recipe4m_auth"
 
-GLOBAL_PREFIX="dev/api"
+GLOBAL_PREFIX="dev"
 
 PORT=3000
 
